--- a/index.html
+++ b/index.html
@@ -1011,7 +1011,7 @@
 
   .ticker-inner {
     display: inline-block;
-    animation: ticker 90s linear infinite;
+    animation: ticker 360s linear infinite;
     font-family: 'Barlow Condensed', sans-serif;
     font-size: 0.82rem;
     font-weight: 500;
@@ -2964,7 +2964,7 @@ function renderExportCardPreview() {
       <span style="color:#fff">${p.player} <span style="color:rgba(255,255,255,0.5);font-size:.8rem">(${p.team})</span></span>
       <span style="color:#f5c842;font-weight:700">${p.yellow} 🟨</span>
     </div>`).join('')}
-    <div style="margin-top:10px;color:rgba(255,255,255,0.4);font-size:.72rem;">Football Oracle · candid-nasturtium-6a0581.netlify.app</div>`;
+    <div style="margin-top:10px;color:rgba(255,255,255,0.4);font-size:.72rem;">Football Oracle · footballoracle.netlify.app</div>`;
 }
 
 function exportSuspensionCard() {
@@ -2973,7 +2973,7 @@ function exportSuspensionCard() {
   const now = new Date().toLocaleDateString('en-GB',{day:'numeric',month:'short',year:'numeric'});
   let lines = ['⚡ SUSPENSION ALERT — ' + now, 'Players one yellow from a ban:', ''];
   danger.forEach(p => { lines.push('• ' + p.player + ' (' + p.team + ') — ' + p.yellow + ' yellows'); });
-  lines.push('', 'Football Oracle · candid-nasturtium-6a0581.netlify.app');
+  lines.push('', 'Football Oracle · footballoracle.netlify.app');
   const text = lines.join('\n');
   navigator.clipboard.writeText(text).then(() => {
     const btn = event.target;
@@ -2992,7 +2992,7 @@ function exportPredictionsCard() {
     lines2.push('  Booking: ' + p.playerToBook.split(' — ')[0]);
     lines2.push('');
   });
-  lines2.push('Football Oracle · candid-nasturtium-6a0581.netlify.app');
+  lines2.push('Football Oracle · footballoracle.netlify.app');
   const text = lines2.join('\n');
   navigator.clipboard.writeText(text).then(() => {
     const btn = event.target;
